force-app/main/default/objects/Block_Pricing__c/Block_Pricing__c.object-meta.xml
<CustomObject>
    <label>Block Pricing</label>
    <nameField>
        <displayFormat>BP-{0000000}</displayFormat>
        <label>Block Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Block Pricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>