force-app/main/default/objects/Block_Pricing__c/fields/Legal_meter_type_USD_AUD__c.field-meta.xml
<CustomField>
    <fullName>Legal_meter_type_USD_AUD__c</fullName>
    <label>Legal meter type(USD,AUD)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Named Users</fullName>
            </value>
            <value>
                <fullName>Fee Earners</fullName>
            </value>
            <value>
                <fullName>Lawyers</fullName>
            </value>
            <value>
                <fullName>Employees</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Records</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>no meter type</fullName>
            </value>
            <value>
                <fullName>Firmwide</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
                <isActive>false</isActive>
                <label>Employee</label>
            </value>
            <value>
                <fullName>Named User</fullName>
                <isActive>false</isActive>
                <label>Named User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>