force-app/main/default/objects/Block_Pricing__c/fields/Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Lower_Bound__c</fullName>
    <description>Represents the lower bound for employee compliance type and lower bound for Block pricing (only for legal sub-vertical).</description>
    <label>Lower Bound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>