force-app/main/default/objects/Block_Pricing__c/fields/Product_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Product_Business_Unit__c</fullName>
    <description>Formula field for Product Business Unit
Created as part of BIZ-47120. Updates to Block Pricing Matrix.</description>
    <formula>Text(Product__r.Business_Units__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Business Unit</label>
    <type>Text</type>
</CustomField>