force-app/main/default/objects/Block_Pricing__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>Formula field for Product Line
Created as part of BIZ-47120. Updates to Block Pricing Matrix.</description>
    <formula>Product__r.Product_Line_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>