force-app/main/default/objects/Block_Pricing__c/fields/Product_Name1__c.field-meta.xml
<CustomField>
    <fullName>Product_Name1__c</fullName>
    <description>Formula field for Product Name
Created as part of BIZ-47120. Updates to Block Pricing Matrix.</description>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>