force-app/main/default/objects/Block_Pricing__c/fields/Product_type__c.field-meta.xml
<CustomField>
    <fullName>Product_type__c</fullName>
    <description>Formula field for Product type
Created as part of BIZ-47120. Updates to Block Pricing Matrix.</description>
    <formula>TEXT(Product__r.Product_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product type</label>
    <type>Text</type>
</CustomField>