force-app/main/default/objects/Block_Pricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Code_Formula__c</columns>
    <columns>Price__c</columns>
    <columns>Lower_Bound__c</columns>
    <columns>Upper_Bound__c</columns>
    <columns>Product__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>