force-app/main/default/objects/Block_Pricing__c/listViews/Block_Pricing.listView-meta.xml
<ListView>
    <fullName>Block_Pricing</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Lower_Bound__c</columns>
    <columns>Upper_Bound__c</columns>
    <columns>Block_Pricing_Meter_Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Price__c</columns>
    <columns>Type__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Account Tier</value>
    </filters>
    <filters>
        <field>Product_Code__c</field>
        <operation>contains</operation>
        <value>BU-01986</value>
    </filters>
    <label>Account Tier Pricing</label>
</ListView>