force-app/main/default/objects/Block_Pricing__c/listViews/Employee_Compliance.listView-meta.xml
<ListView>
    <fullName>Employee_Compliance</fullName>
    <columns>NAME</columns>
    <columns>Product_Code_Formula__c</columns>
    <columns>Lower_Bound__c</columns>
    <columns>Upper_Bound__c</columns>
    <columns>Product__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Employee Compliance</value>
    </filters>
    <label>Employee Compliance</label>
</ListView>