force-app/main/default/objects/Block_Pricing__c/listViews/Engagement_Model.listView-meta.xml
<ListView>
    <fullName>Engagement_Model</fullName>
    <columns>NAME</columns>
    <columns>Product_Code_Formula__c</columns>
    <columns>Block_Pricing_Meter_Type__c</columns>
    <columns>Type__c</columns>
    <columns>Price__c</columns>
    <columns>Engagement_Model__c</columns>
    <columns>Product__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Engagement Model</value>
    </filters>
    <label>Engagement Model</label>
</ListView>