force-app/main/default/objects/Block_Pricing__c/listViews/Meter_Type.listView-meta.xml
<ListView>
    <fullName>Meter_Type</fullName>
    <columns>NAME</columns>
    <columns>Product_Code_Formula__c</columns>
    <columns>Legal_meter_type_USD_AUD__c</columns>
    <columns>Legal__c</columns>
    <columns>meter_type_Accounting__c</columns>
    <columns>meter_type_Consulting__c</columns>
    <columns>meter_type_Corporate__c</columns>
    <columns>meter_type_IBA__c</columns>
    <columns>meter_type_PCM__c</columns>
    <columns>meter_type_RealAssets__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Meter Type</value>
    </filters>
    <label>Meter Type</label>
</ListView>